--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pdfjs-dist": "^2.10.377",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "langchain": "0.0.77"
   },
   "devDependencies": {
     "@types/pdfjs-dist": "^2.10.378"
