--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "11.11.0",
     "@emotion/styled": "11.11.0",
-    "@lgrammel/ai-utils": "0.0.1",
+    "ai-utils.js": "0.0.4",
     "@mui/icons-material": "^5.2.7",
     "@mui/material": "5.13.1",
     "@types/node": "20.2.1",
